--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,11 @@ header
     margin-bottom: 25px;
     padding-left: 5px;
 }
+
+.button-adicionar
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+}
